syntax = "proto3";
import "google/protobuf/wrappers.proto";
import "protos/base.proto";

package protos.connectors;

message Connector {
  Source type = 1;
  google.protobuf.StringValue name = 2;
  repeated ConnectorKey keys = 3;
}

message ConnectorKey {
  SourceKeyType key_type = 1;
  google.protobuf.StringValue key = 2;
  google.protobuf.StringValue connector_name = 3;
}
